Updating tests